added all base component files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
     <style>
-      
+      @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap'); /*used a google font as the assignment sheet said we could*/
+      *{
+          margin: 0;
+          box-sizing: border-box;
+          font-family: "Space Mono", Helvetica, Verdana, Arial, sans-serif; 
+      }
     </style>
   </head>
   <body>
